static/css/main.css
/* ... */
		input[type="checkbox"]:focus + label:before,
		input[type="radio"]:focus + label:before {
			border-color: #1cb495;
			box-shadow: 0 0 0 2px #1cb495;
		}

	input[type="checkbox"] + label:before {
		border-radius: 6px;
	}

	input[type="radio"] + label:before {
		border-radius: 100%;
	}

	::-webkit-input-placeholder {
		color: rgba(255, 255, 255, 0.5) !important;
		opacity: 1.0;
	}

	:-moz-placeholder {
		color: rgba(255, 255, 255, 0.5) !important;
		opacity: 1.0;
	}

	::-moz-placeholder {
		color: rgba(255, 255, 255, 0.5) !important;
		opacity: 1.0;
	}

	:-ms-input-placeholder {
		color: rgba(255, 255, 255, 0.5) !important;
		opacity: 1.0;
	}

	.formerize-placeholder {
		color: rgba(255, 255, 255, 0.5) !important;
		opacity: 1.0;
	}

/* Button */

	input[type="submit"],
	input[type="reset"],
	input[type="button"],
	button,
	.button {
		-moz-appearance: none;
		-webkit-appearance: none;
		-ms-appearance: none;
		appearance: none;
		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
		background-color: #8565c4;
		border-radius: 6px;
		border: 0;
		color: #ffffff !important;
		cursor: pointer;
		display: inline-block;
		font-weight: 700;
		height: 2.75em;
		line-height: 2.75em;
		padding: 0 1.125em;
		text-align: center;
		text-decoration: none;
		white-space: nowrap;
	}

		input[type="submit"]:hover,
		input[type="reset"]:hover,
		input[type="button"]:hover,
		button:hover,
		.button:hover {
			background-color: #442c72;
		}

		input[type="submit"]:active,
		input[type="reset"]:active,
		input[type="button"]:active,
		button:active,
		.button:active {
			background-color: #8565c4;
		}

		input[type="submit"].disabled, input[type="submit"]:disabled,
		input[type="reset"].disabled,
		input[type="reset"]:disabled,
		input[type="button"].disabled,
		input[type="button"]:disabled,
		button.disabled,
		button:disabled,
		.button.disabled,
		.button:disabled {
			opacity: 0.5;
		}

		@media screen and (max-width: 480px) {

			input[type="submit"],
			input[type="reset"],
			input[type="button"],
			button,
			.button {
				padding: 0;
			}

		}

/* Header */

	#header h1 {
		font-family: 'Great Vibes', cursive;
		font-size: 3.25em;
		margin: 0;
	}

	#header p {
		font-size: 1.35em;
		line-height: 1.65em;
	}

	#header a {
		color: inherit;
	}

	@media screen and (max-width: 736px) {

		#header h1 {
			font-size: 2em;
		}

		#header p {
			font-size: 1em;
		}

	}

	@media screen and (max-width: 480px) {

		#header {
			margin: 0 0 1em 0;
		}

	}

/* Signup Form */

	#signup-form {
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		position: relative;
	}

		#signup-form input[type="text"],
		#signup-form input[type="password"],
		#signup-form input[type="email"] {
			width: 18em;
		}

		#signup-form > * {
			margin: 0 0 0 1em;
		}

		#signup-form > :first-child {
			margin: 0 0 0 0;
		}

		@media screen and (max-width: 480px) {

			#signup-form {
				-moz-flex-direction: column;
				-webkit-flex-direction: column;
				-ms-flex-direction: column;
				flex-direction: column;
			}

				#signup-form input[type="text"],
				#signup-form input[type="password"],
				#signup-form input[type="email"] {
					width: 100%;
				}

				#signup-form > * {
					margin: 1.25em 0 0 0;
				}

				#signup-form .message {
					bottom: -1.5em;
					font-size: 0.9em;
					height: 1em;
					left: 0;
					line-height: inherit;
					margin-top: 0;
					position: absolute;
				}

		}

/* Footer */

	#footer {
		-moz-transition: opacity 0.5s ease-in-out;
		-webkit-transition: opacity 0.5s ease-in-out;
		-ms-transition: opacity 0.5s ease-in-out;
		transition: opacity 0.5s ease-in-out;
		color: rgba(255, 255, 255, 0.7);
		opacity: 0.7;
	}

		#footer .icons {
			margin: 0 0 0.5em 0;
		}

		#footer .copyright {
			font-size: 0.8em;
			list-style: none;
			padding: 0;
		}

			#footer .copyright li {
				border-left: solid 1px rgba(255, 255, 255, 0.5);
				display: inline-block;
				line-height: 1em;
				margin: 0 0 0 0.75em;
				padding: 0 0 0 0.75em;
			}

				#footer .copyright li:first-child {
					border-left: 0;
					margin-left: 0;
					padding-left: 0;
				}

			#footer .copyright a {
				color: inherit;
			}

		#footer:hover {
			opacity: 1;
		}

		#footer > :last-child {
			margin-bottom: 0;
		}

		@media screen and (max-width: 1680px) {

			#footer {
				bottom: 0;
			}

		}

		@media screen and (max-width: 736px) {

			#footer {
				bottom: 2em;
				left: 2em;
			}

		}

		@media screen and (max-width: 360px) {

			#footer {
				bottom: 1.25em;
				left: 1.25em;
			}

		}

		@media screen and (max-height: 640px) {

			#footer {
				bottom: auto;
				left: auto;
				margin: 1em 0 0 0;
				position: relative;
			}

		}

/* -------------------------------- 

Stretchy Nav style - common to:
 - basic navigation
 - add-content navigation
 - edit-content navigation

-------------------------------- */
.cd-stretchy-nav {
  position: fixed;
  z-index: 8;
  top: 40px;
  right: 5%;
}
.cd-stretchy-nav .stretchy-nav-bg {
  /* this is the stretching navigation background */
  position: absolute;
  z-index: 7;
  top: 0;
  right: 0;
  width: 60px;
  height: 60px;
  border-radius: 30px;
  background: #9999cc;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
  -webkit-transition: height 0.2s, box-shadow 0.2s;
  -moz-transition: height 0.2s, box-shadow 0.2s;
  transition: height 0.2s, box-shadow 0.2s;
}
.cd-stretchy-nav.nav-is-visible .stretchy-nav-bg {
  height: 100%;
  box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
}
/* ... */

